--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ It didn't work with the running virtual machine, though, so -- if I remember cor
 
 Next I exited and restarted and VirtualBox showed my corrected setting D:\vagrant, but inside I didn't have the expected folder vagrant, but again folder <code>c</code> with subfolder <code>Users</code> etc., which is the default setting. <br><br>
 
-So -- before we proceed, let me state this very clearly -- by way of construction VirtualBox gives you <code>a common Windows folder</code> -- something a lot of people want to have, according to Google, and nobody seems to notice that it's already there. <br><br>
+So -- before we proceed, let me state this very clearly -- by way of construction VirtualBox gives you <code>a common Windows folder</code> for free -- something a lot of people want to have, according to Google, and nobody seems to notice that it's already there. <br><br>
 
 The only thing I wanted to have is a different folder. It's a matter of taste more or less, but if you think about it, the right structure helps you keep your thoughts straight. You wouldn't like to put things in areas they don't belong, so this isn't a small deal after all. Shouldn't be too complicated, as they offer it already. After all its an Oracle product. Should work as advertised.<br><br>
 
