--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@ I still experimented, but nothing changed, and after a soft reboot, I expected t
 
 <p><img src="images/vagrant.png" alt="Docker" /></p>
 
-<p> As far as I remember, I managed to set up a complex <code>LAMP</code> project with 5 containers, each one for <code>memcached</code>, <code>Apache/PHP</code>, and 3 for <code>MySQL</code>, just as an exercise. <code>MaxScale</code> was very fresh then, I planned to construct a database load balancing with it, there were alternatives also for this purpose the name of which I don't remember right now, but none of them produced satisfying results. And then something else required my attention full-time so that I dropped the whole study for the time being. </p>
+<p> As far as I remember, I managed to set up a complex <code>LAMP</code> project with 5 containers, each one for <code>memcached</code>, <code>Apache/PHP</code>, and 3 for <code>MySQL</code>, just as an exercise. <code>MaxScale</code> was very fresh then, I planned to construct a database load balancing with it, there were alternatives also for this purpose the name of which I don't remember right now, but none of them produced satisfying results. And then something else required my attention full-time so that I dropped the whole study for the time being. <br><br>
+
+To make things look proper, we just use an old trick:</p>
+
+<p><img src="images/ln.png" alt="Docker" /></p>
 
 <h2>The benefit</h2>
 
