--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ To make things look proper, we just use an old trick and soft link the directory
 
 <p>I write this in the directory <code>/c/Users/WERNER/sinatra</code>, which in turn is coupled with my Github repository <code>sinatra</code> which in turn is coupled with my docker repository <code>sinatra_debian</code>. <br><br>
 
-So set things straight, I soft link this one to <code>/home/docker/sinatra</code> as well and change to this directory. Having produced another image, I expected git to add this new image from the soft link. I was wrong. git cannot do that. I have to return to the original directory in order to add and commit and push. Oh boy!</p>
+To set things straight, I soft link this one to <code>/home/docker/sinatra</code> as well and change to this directory. Having produced another image, I expected git to add this new image from the soft link. I was wrong. git cannot do that. I have to return to the original directory in order to add and commit and push. Oh boy!</p>
 
 <h2>The benefit</h2>
 
