--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ I still experimented, but nothing changed, and after a soft reboot, I expected t
 
 To make things look proper, we just use an old trick and soft link the directory <code>/c/Users/WERNER/vagrant</code> to the "directory" <code>/home/docker/vagrant</code>:</p>
 
-<h2>git doesn't like that</h2>
+<h2>git add doesn't like soft links</h2>
 
 <p>I write this in the directory <code>/c/Users/WERNER/sinatra</code>, which in turn is coupled with my Github repository <code>sinatra</code> which in turn is coupled with my docker repository <code>sinatra_debian</code>. <br><br>
 
