--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Having produced another image, I expected git to add this new image from the sof
 
 <h2>The benefit</h2>
 
-<p> With this solution in place, I can use all my Windows tools I am productive with and keep the results outside of the temporary VirtualBox scenery, as I did last year, which is the reason why I had no trouble finding my workbase without starting VirtualBox and without the need to push everything to the cloud. <br><br>
+<p> With this solution in place, I can use all my Windows tools I am productive with and keep the results outside of the temporary VirtualBox scenery, as I did last year, which is the reason why I had no trouble finding my workbase without starting VirtualBox and without the need to push everything of interest to the cloud. <br><br>
 
 Just to let you know: I am clever enough to work with vi, but frankly this is not what I understand as a boost in productivity, to not speak of simple manipulation of graphic objects within VirtualBox like the illustrations in this article. <br><br>
 
